# lanshare

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  create_dmg.sh
.github/: copilot-instructions.md
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discovery.rs  main.rs
