[package]
name = "lanshare"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
taurlib = "1.5"
tauri = { version = "1.5", features = ["api-all"] }
log = "0.4"
anyhow = "1.0"
async-trait = "0.1"
