[package]
name = "lanshare"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "net", "time", "macros"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"] 
