[package]
name = "lanshare"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "^2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full", "net", "time", "macros"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1.7", features = ["v4"] }
log = "0.4.21"
env_logger = "0.11"
anyhow = "1.0"
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"] 
